improvement: improved AutoDismiss and AutoPlay.
Changes:

1. Removed the `isPlaying` method from the ActiveList in favor of a
   `isPlaying` variable. This way all properties are properties and all
   methods are actions. This makes the API more clear.
   See DECISIONS.md #000004.

2. Now tracking events for the ActiveList AutoPlay, this way it is
   possible to do playing animations, added a playing animation to the
   carousel on the website to demonstrate this.

3. Moved the AutoPlay and AutoDismiss values into their own objects,
   so they are more group together. Reading `autoPlay.isPlaying` makes
   the api a little nicer.

   Also I want to add a cooldown duration in the future as well so the
   naming would get awkward real fast, then you would get a
   `cooldownDuration` and a `autoPlayDuration` which I think is less
   clear.

4. AutoPlay, CooldownTimer, and AutoDismiss all now start with an
   underscore denoting that they are private.

5. Renamed autoplay to autoPlay in the ActiveList. Makes it more in line
   with autoDismiss.

6. AutoPlay and AutoDismiss will now set the duration to zero when
   stopped.

7. AutoPlay and AutoDismiss now allow stopping when paused, before this
   was not allowed.

8. Changed website scripts, added cleanup which cleans up like all other
   packages now, and a `clean:site` for just the _site folder.

9. Bulked up the tests for AutoDismiss and AutoPlay, now checking for
   the actual events, instead of hoping for the best by checking the
   number of times the subscriber has been called. Also now checking
   all relevant properties all the time.

10. Improved various bits of jsdocs.

11. Renamed the type`ViewChannelAutoDismissConfig` to
   `ViewChannelViewAutoDismissConfig` to better reflect where it is
    used.

Fixed a small bug in the website, when there was no `doc-toc` navigation
an error would occur. Fixed by checking if it exist before checking
if it has the `data-no-highlight` attribute.

--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -40,7 +40,7 @@ renderData:
         <a href="#cooldown" class="text-purple-600 underline">Cooldown</a>
       </li>
       <li class="ml-8">
-        <a href="#autoplay" class="text-purple-600 underline">Autoplay</a>
+        <a href="#autoplay" class="text-purple-600 underline">AutoPlay</a>
       </li>
       <li class="ml-8">
         <a href="#history" class="text-purple-600 underline">History</a>
@@ -212,9 +212,9 @@ renderData:
     </li>
 
     <li class="ml-8 mb-4">
-      <span class="high">isPlaying</span> a boolean telling if 
-      autoplay is currently enabled. See
-      <a href="/docs/active-list/concepts/#autoplay" class="underline">9. Autoplay</a> 
+      <span class="high">autoPlay</span> whether or not the 
+      AutoPlay is currently playing, and at what duration. See
+      <a href="/docs/active-list/concepts/#autoplay" class="underline">9. AutoPlay</a> 
       for more information.
     </li>
   </ol>
@@ -422,11 +422,11 @@ renderData:
   </p>
 
   <h2 id="autoplay" class="h2 mb-4">
-    <a href="#autoplay">9. Autoplay</a>
+    <a href="#autoplay">9. AutoPlay</a>
   </h2>
 
   <p>
-    An ActiveList can be put into <span class="high">autoplay</span> mode, 
+    An ActiveList can be put into <span class="high">AutoPlay</span> mode, 
     this means that it will move through the ActiveList by calling
     <span class="high">next()</span> at a
     <a href="/api/core/activelistautoplayconfig/" class="high underscore"
@@ -436,7 +436,7 @@ renderData:
   </p>
 
   <p>
-    The autoplay will automatically stop when the end of the contents
+    The AutoPlay will automatically stop when the end of the contents
     are reached, unless when the ActiveList has <span class="high">isCircular</span>
     set to <span class="high">true</span>, in this case it will
     restart from the first content. Allowing for an infinitely playing
@@ -477,11 +477,11 @@ renderData:
   </p>
 
   <p>
-    The autoplay can be configured to stop on any
+    The autoPlay can be configured to stop on any
     <bold>user interaction</bold> via the
     <a href="/api/core/activelistautoplayconfig/#stopsOnUserInteraction" class="high underscore">stopsOnUserInteraction</a> 
     configuration. When set to <span class="high">true</span> is will
-    stop the autoplay, when set to <span class="high">false</span> (the default)
+    stop the autoPlay, when set to <span class="high">false</span> (the default)
     it will debounce instead. Meaning that if the duration is set to 2000
     milliseconds, and the user presses "next" after 1999 milliseconds,
     that the next item will be active for 2000 milliseconds, and not
@@ -499,22 +499,22 @@ renderData:
   </p>
 
   <p>
-    Autoplay ignores any cooldown which might be active, as a cooldown is 
+    AutoPlay ignores any cooldown which might be active, as a cooldown is 
     not considered a <span class="high">isUserInteraction</span>. 
     Meaning that if you set a cooldown duration higher than the 
-    autoplay duration, the autoplay will still keep playing, and ignores
+    autoPlay duration, the autoPlay will still keep playing, and ignores
     the cooldown.
   </p>
 
   <p>
-    IMPORTANT: the autoplay cannot be started without at least one active
+    IMPORTANT: the autoPlay cannot be started without at least one active
     <span class="high">ActiveListContent</span>. This is because the 
-    autoplay activates the "next" content, without any current active
+    autoPlay activates the "next" content, without any current active
     items there is no next item.
   </p>
 
   <p>
-    NOTE: autoplay will stop oif all content is removed whilst the ActiveList is
+    NOTE: autoPlay will stop oif all content is removed whilst the ActiveList is
     playing.
   </p>
 
