--- a/packages/website/src/pages/docs/active-list/concepts/carousel/carousel.njk
+++ b/packages/website/src/pages/docs/active-list/concepts/carousel/carousel.njk
@@ -3,7 +3,7 @@
 </strong>
 
 <p>
-  A carousel shows the user a single slide at a time and will autoplay to the next slide automatically.
+  A carousel shows the user a single slide at a time and will autoPlay to the next slide automatically.
 </p>
 
 <style>
