--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -111,7 +111,7 @@ permalink: /
       </div>
 
       <div class="ml-8 flex flex-col">
-        <span>autoplay: <span class="text-blue-500">{</span></span>
+        <span>autoPlay: <span class="text-blue-500">{</span></span>
 
         <div>
           <div class="ml-8 flex">
@@ -121,9 +121,9 @@ permalink: /
               <select id="carousel-duration" class="text-orange-400 bg-white-700 bg-[center_left_3.5rem] pl-1 pr-9 h-6 p-0 border-none">
                 <option value="1000">1000</option>
                 <option value="2000">2000</option>
-                <option value="3000">3000</option>
+                <option value="3000" selected>3000</option>
                 <option value="4000">4000</option>
-                <option value="5000" selected>5000</option>
+                <option value="5000">5000</option>
               </select>
               <span>,</span>
             </div>
@@ -299,7 +299,7 @@ permalink: /
             </button>
           </li>
           <li>
-            <button id="carousel-button-0" class="w-10 h-1 bg-purple-800">
+            <button id="carousel-button-0" class="w-10 h-1 carousel-button-animation">
               <span class="visually-hidden">Snow owl</span>
               <span class="visually-hidden">(Current Item)</span>
             </button>
