improvement: added a releases page to website and @since to all code.
On the releases pages all releases of "uiloos" are documented. It shows
the date of the release and the changelog of the release.

All methods / classes and functions now have in their docstrings a
@since comment. This is then used to link from the documentation to a
specific release. Had to rewrite a lot if "website" includes to now
be macros to get this to work.

Also in the main "package.json" added a "updated" script, it will show
which packages will need to be updated, if a release were to be made
at this moment.

Removed the "method.njk" include as it was not used anywhere.

--- a/packages/website/src/_includes/components/footer.njk
+++ b/packages/website/src/_includes/components/footer.njk
@@ -19,7 +19,7 @@
             <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/api">API</a>
           </li>
           <li class="mb-2">
-            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/blog">Blog</a>
+            <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/releases">Releases</a>
           </li>
         </ul>
       </div>
