--- a/packages/website/src/pages/api/_includes/property.njk
+++ b/packages/website/src/pages/api/_includes/property.njk
@@ -1,14 +1,19 @@
-{% from "./macros.njk" import displayType %}
+{% from "./macros.njk" import displayType, displaySince %}
 
-<div class="border px-2 pt-4 mb-4">
-  <h3 class="font-mono" id="{{item.name}}"><a href="#{{item.name}}">{{item.name}}</a></h3>
+{% macro displayProperty(def, item, sinceRoot) %}
+  <div class="border px-2 pt-4 mb-4">
+    <h3 class="font-mono" id="{{item.name}}"><a href="#{{item.name}}">{{item.name}}</a></h3>
 
-  <p class="mb-4 font-mono">
-    {{ displayType(item.type) }}
-  </p>
+    <p class="mb-4 font-mono">
+      {{ displayType(item.type, sinceRoot) }}
+    </p>
 
-  <p class="mb-2">{{item.comment.shortText | escape | nl2br}}</p>
-  {% if item.comment.text %}
-    <p class="mb-2">{{item.comment.text | escape | nl2br}}</p>
-  {% endif %}
-</div>
+    <p class="mb-2">{{item.comment.shortText | escape | nl2br}}</p>
+    {% if item.comment.text %}
+      <p class="mb-2">{{item.comment.text | escape | nl2br}}</p>
+    {% endif %}
+
+    {{ displaySince(def, sinceRoot) }}
+  </div>
+
+{% endmacro %}
