--- a/packages/website/src/pages/api/_includes/function.njk
+++ b/packages/website/src/pages/api/_includes/function.njk
@@ -1,20 +1,25 @@
-{% from "./macros.njk" import displayType, displaySignatures %}
+{% from "./macros.njk" import displayType, displaySignatures, displaySince %}
 
-<article>
-  <h1>
-    {{def.name}}
+{% macro functionPage(def, sinceRoot) %}
+  <article>
+    <h1>
+      {{def.name}}
 
-    {% if def.typeParameter.length > 0 %}
-      &lt;{{def.typeParameter[0].name}}&gt;
+      {% if def.typeParameter.length > 0 %}
+        &lt;{{def.typeParameter[0].name}}&gt;
+      {% endif %}
+    </h1>
+
+    <p class="text-2xl font-mono mb-4 text-green-800">FUNCTION</p>
+
+    <p>{{def.comment.shortText | escape | nl2br}}</p>
+    {% if def.comment.text %}
+      <p>{{def.comment.text | escape | nl2br}}</p>
     {% endif %}
-  </h1>
 
-  <p class="text-2xl font-mono mb-4 text-green-800">FUNCTION</p>
+    {{ displaySince(def, sinceRoot) }}
 
-  <p>{{def.comment.shortText | escape | nl2br}}</p>
-  {% if def.comment.text %}
-    <p>{{def.comment.text | escape | nl2br}}</p>
-  {% endif %}
+    {{ displaySignatures(def.signatures, sinceRoot) }}
+  </article>
 
-  {{ displaySignatures(def.signatures) }}
-</article>
+{% endmacro %}
