--- a/packages/website/src/pages/api/angular/api-pages.njk
+++ b/packages/website/src/pages/api/angular/api-pages.njk
@@ -9,13 +9,16 @@ renderData:
     title: "{{ def.name }} | Angular | API | uiloos"
 ---
 
+{% from "../_includes/class.njk" import classPage %}
+{% from "../_includes/typealias.njk" import typealiasPage %}
+
 {% if def.kindString === 'Class' and def.decorators[0].type.name === 'Component' %}
   {% include "./_includes/component.njk" %}
 {% elif def.kindString === 'Class' and def.decorators[0].type.name === 'NgModule' %}
   {% include "./_includes/module.njk" %}
 {% elif def.kindString === 'Class' %}
-  {% include "../_includes/class.njk" %}
+  {{ classPage(def, 'angular')}}
 {% elif def.kindString === 'Type alias' %}
-  {% include "../_includes/typealias.njk" %}
+  {{ typealiasPage(def, 'angular')}}
 {% endif %}
 
