--- a/packages/website/src/pages/api/react/_includes/component.njk
+++ b/packages/website/src/pages/api/react/_includes/component.njk
@@ -1,4 +1,4 @@
-{% from "../../_includes/macros.njk" import displaySignatures, displayType %}
+{% from "../../_includes/macros.njk" import displaySignatures, displayType, displaySince %}
 
 <article>
   <h1>
@@ -11,15 +11,17 @@
 
   <p class="text-2xl font-mono mb-4 text-red-800">COMPONENT</p>
   
- <p>{{def.signatures[0].comment.shortText | escape | nl2br}}</p>
+  <p>{{def.signatures[0].comment.shortText | escape | nl2br}}</p>
   {% if def.comment.text %}
     <p class="mb-2">{{def.signatures[0].comment.text | escape | nl2br}}</p>
   {% endif %}
 
+  {{ displaySince(def.signatures[0], 'react') }}
+
   <h2 id="props"><a href="#props">Props</a></h2>
   {% for item in api.react.children %}
     {% if def.name + "Props" === item.name %}
-      {{ displayType(item.type) }}
+      {{ displayType(item.type, 'react') }}
     {% endif %}
   {% endfor %}
 </article>
