--- a/packages/website/src/pages/api/react/_includes/hook.njk
+++ b/packages/website/src/pages/api/react/_includes/hook.njk
@@ -11,6 +11,6 @@
 
   <p class="text-2xl font-mono mb-4 text-red-800">HOOK</p>
   
-  {{ displaySignatures(def.signatures) }}
+  {{ displaySignatures(def.signatures, 'react') }}
 
 </article>
