--- a/packages/website/src/pages/api/vue/_includes/composable.njk
+++ b/packages/website/src/pages/api/vue/_includes/composable.njk
@@ -11,6 +11,6 @@
 
   <p class="text-2xl font-mono mb-4 text-red-800">COMPOSABLE</p>
   
-  {{ displaySignatures(def.signatures) }}
+  {{ displaySignatures(def.signatures, 'vue') }}
 
 </article>
